Fixed white space wrapping

--- a/web/src/components/document/Document.scss
+++ b/web/src/components/document/Document.scss
@@ -93,7 +93,7 @@
 
       textarea {
          overflow: hidden;
-         white-space: nowrap;
+         white-space: pre;
          padding-right: 10px;
          padding-left: 5px;
          border: none;
